Add initial project overview and approach sections to README

--- a/ml/Model_Building.ipynb
+++ b/ml/Model_Building.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading Dataset and Libriaries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +34,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset Cleaning "
+    "### Dataset Cleaning "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,19 +236,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Visualisation "
+    "### Data Visualisation "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_84342/3005125507.py:9: FutureWarning: \n",
+      "/tmp/ipykernel_6143/3005125507.py:9: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -283,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_84342/748920822.py:3: FutureWarning: \n",
+      "/tmp/ipykernel_6143/748920822.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,58 +375,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FEATURE SELECTION "
+    "### FEATURE SELECTION "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  Feature  Importance\n",
-      "5           interest_rate    0.070318\n",
-      "2             loan_amount    0.063624\n",
-      "4     outstanding_balance    0.047736\n",
-      "9                   age.1    0.047207\n",
-      "8                  salary    0.046151\n",
-      "6                     age    0.046028\n",
-      "0              Unnamed: 0    0.036455\n",
-      "1593    location_Chiredzi    0.024619\n",
-      "1599       location_Gokwe    0.020665\n",
-      "1640    location_Shurugwi    0.018465\n"
+      "               Feature  Importance\n",
+      "3               salary    0.280897\n",
+      "2  outstanding_balance    0.280387\n",
+      "1          loan_amount    0.171734\n",
+      "4                  age    0.152377\n",
+      "0        interest_rate    0.114605\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.impute import SimpleImputer\n",
     "import pandas as pd\n",
     "\n",
-    "#Prepare data for feature selection\n",
+    "# Assuming 'df' is your DataFrame and it's already defined\n",
+    "# Prepare data for feature selection\n",
     "X = df.drop(['loan_id', 'Loan Status'], axis=1)  # Assuming 'Loan Status' is the target variable\n",
     "y = df['Loan Status']\n",
     "\n",
     "# Encoding categorical variables if necessary\n",
     "X = pd.get_dummies(X)\n",
     "\n",
+    "selected_features = ['interest_rate', 'loan_amount', 'outstanding_balance', 'salary', 'age']\n",
+    "X_selected = X[selected_features]\n",
     "\n",
     "# Splitting the dataset\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.25, random_state=42)  # Adjust the test_size as needed\n",
+    "X_train_selected, X_test_selected, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Step 3: Feature Selection\n",
+    "# Feature Selection\n",
     "model = RandomForestClassifier()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train_selected, y_train)  # Use X_train_selected instead of X_train\n",
     "\n",
     "# Get feature importances\n",
     "importances = model.feature_importances_\n",
     "\n",
     "# Convert the importances into a DataFrame\n",
-    "feature_importance_df = pd.DataFrame({'Feature': X.columns, 'Importance': importances})\n",
+    "feature_importance_df = pd.DataFrame({'Feature': selected_features, 'Importance': importances})\n",
     "\n",
     "# Sort the DataFrame to discover the most important features\n",
     "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
@@ -432,29 +436,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MODEL TRAINING "
+    "### MODEL TRAINING "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy with LogisticRegression: 0.8714353237750119\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Accuracy with LogisticRegression: 0.8714353237750119\n",
       "Accuracy with SVC: 0.8573079145002889\n",
       "Accuracy with GradientBoostingClassifier: 0.8841972585473452\n",
       "Accuracy with KNeighborsClassifier: 0.8478021112336537\n",
-      "Accuracy with RandomForestClassifier: 0.8808886087915551\n"
+      "Accuracy with RandomForestClassifier: 0.8812562365421984\n",
+      "Best model saved: GradientBoostingClassifier with accuracy 0.8841972585473452\n"
      ]
     }
    ],
@@ -485,11 +484,27 @@
     "    RandomForestClassifier()  # RandomForestClassifier added\n",
     "]\n",
     "\n",
+    "import joblib  # Import joblib for saving the model\n",
+    "\n",
+    "# Initialize variables to track the best model and its accuracy\n",
+    "best_accuracy = 0\n",
+    "best_model = None\n",
+    "\n",
     "# Train and evaluate each model\n",
     "for model in models:\n",
     "    model.fit(X_train_selected, y_train)\n",
     "    predictions = model.predict(X_test_selected)\n",
-    "    print(f\"Accuracy with {model.__class__.__name__}: {accuracy_score(y_test, predictions)}\")"
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    print(f\"Accuracy with {model.__class__.__name__}: {accuracy}\")\n",
+    "    \n",
+    "    # Update the best model if the current model has a better accuracy\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_model = model\n",
+    "\n",
+    "# Save the best model\n",
+    "joblib.dump(best_model, 'best_model.joblib')\n",
+    "print(f\"Best model saved: {best_model.__class__.__name__} with accuracy {best_accuracy}\")"
    ]
   },
   {
@@ -508,20 +523,6 @@
     "\n",
     "Random Forest Classifier is valued for its versatility and robustness to overfitting, assuming uncorrelated models perform better together but can be complex and less interpretable"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "MODEL EVALUATION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
